Fix scrollbars

--- a/src-web/main.css
+++ b/src-web/main.css
@@ -55,39 +55,34 @@
     @apply text-left;
   }
 
+  ::-webkit-scrollbar,
+  ::-webkit-scrollbar-corner {
+    @apply w-[8px] h-[8px] bg-transparent;
+  }
+
+  ::-webkit-scrollbar-track {
+    @apply bg-transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply bg-text-subtlest rounded-[4px] opacity-20;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    @apply opacity-40 !important;
+  }
+
+  iframe {
+    &::-webkit-scrollbar-corner,
+    &::-webkit-scrollbar {
+      @apply bg-surface-highlight !important;
+    }
+  }
+
   .hide-scrollbars {
     &::-webkit-scrollbar-corner,
     &::-webkit-scrollbar {
       @apply hidden !important;
-    }
-  }
-
-  html {
-    * {
-      ::-webkit-scrollbar-corner,
-      ::-webkit-scrollbar {
-        @apply w-[10px] h-[10px];
-      }
-
-      .scrollbar-track,
-      ::-webkit-scrollbar-corner,
-      ::-webkit-scrollbar {
-        @apply bg-transparent;
-      }
-
-      &:hover {
-        &.scrollbar-thumb,
-        &::-webkit-scrollbar-thumb {
-          @apply bg-text-subtlest hover:bg-text-subtle rounded-[2px];
-        }
-      }
-    }
-
-    iframe {
-      &::-webkit-scrollbar-corner,
-      &::-webkit-scrollbar {
-        @apply bg-surface-highlight !important;
-      }
     }
   }
 
